uaa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: uaa
  name: uaa
spec:
  replicas: 1
  selector:
    matchLabels:
      service: uaa
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: uaa
    spec:
      containers:
        - image: pcfseceng/uaa
          name: uaa
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /uaa
              name: uaa-config
      restartPolicy: Always
      volumes:
        - name: uaa-config
          configMap:
            name: uaa-config
