credhub-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    projectcontour.io/upstream-protocol.tls: "9000"
  labels:
    service: credhub
  name: credhub
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    service: credhub
