uaa-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: uaa
  name: uaa
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  type: LoadBalancer
  selector:
    service: uaa
