credhub-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: credhub
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/secure-backends: 'true'
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
      - credhub.ci.miclip.io
      secretName: credhub-cert
  rules:
  - host: credhub.ci.miclip.io
    http:
      paths:
      - backend:
          service:
            name: credhub
            port:
              number: 9000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
