uaa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uaa
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: contour
    ingress.kubernetes.io/force-ssl-redirect: "false"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
      - uaa.ci.miclip.io
      secretName: uaa-cert
  rules:
  - host: uaa.ci.miclip.io
    http:
      paths:
      - backend:
          service:
            name: uaa
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
